; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_parse.c_parser_free.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_parse.c_parser_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jv_parser = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.jv_parser*)* @parser_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parser_free(%struct.jv_parser* %0) #0 {
  %2 = alloca %struct.jv_parser*, align 8
  store %struct.jv_parser* %0, %struct.jv_parser** %2, align 8
  %3 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %4 = call i32 @parser_reset(%struct.jv_parser* %3)
  %5 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %6 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @jv_free(i32 %7)
  %9 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %10 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @jv_free(i32 %11)
  %13 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %14 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @jv_mem_free(i32 %15)
  %17 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %18 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @jv_mem_free(i32 %19)
  %21 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %22 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %21, i32 0, i32 0
  %23 = call i32 @jvp_dtoa_context_free(i32* %22)
  ret void
}

declare dso_local i32 @parser_reset(%struct.jv_parser*) #1

declare dso_local i32 @jv_free(i32) #1

declare dso_local i32 @jv_mem_free(i32) #1

declare dso_local i32 @jvp_dtoa_context_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
